configured webpack (sass + js)

--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "devDependencies": {
+    "css-loader": "^7.1.2",
+    "mini-css-extract-plugin": "^2.9.2",
+    "sass": "^1.89.2",
+    "sass-loader": "^16.0.5",
+    "style-loader": "^4.0.0",
     "webpack": "^5.93.0"
   },
   "name": "ssnagin",
