--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -40,7 +40,7 @@ jobs:
 
         with:
           # Upload entire repository
-          path: './www'
+          path: 'www'
 
       - name: Deploy to GitHub Pages
         id: deployment
