--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@nuxt/devtools": "^3.1.1",
     "@nuxt/eslint": "^1.13.0",
     "@nuxt/image": "^2.0.0",
+    "@nuxt/ui": "^4.4.0",
     "nuxt": "^4.3.0",
+    "tailwindcss": "^4.1.18",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4"
   },
