--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
   "name": "ssnagin",
-  "type": "module",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
-    "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "typecheck": "nuxt typecheck"
   },
   "dependencies": {
-    "@nuxt/devtools": "^3.1.1",
-    "@nuxt/eslint": "^1.13.0",
-    "@nuxt/image": "^2.0.0",
+    "@iconify-json/lucide": "^1.2.87",
+    "@iconify-json/simple-icons": "^1.2.68",
     "@nuxt/ui": "^4.4.0",
     "nuxt": "^4.3.0",
-    "tailwindcss": "^4.1.18",
-    "vue": "^3.5.27",
-    "vue-router": "^4.6.4"
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.14.0"
-  }
+    "@nuxt/eslint": "^1.13.0",
+    "eslint": "^9.39.2",
+    "typescript": "^5.9.3",
+    "vue-tsc": "^3.2.4"
+  },
+  "packageManager": "pnpm@10.28.2"
 }
