--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@iconify-json/lucide": "^1.2.87",
     "@iconify-json/simple-icons": "^1.2.68",
+    "@nuxt/image": "2.0.0",
     "@nuxt/ui": "^4.4.0",
     "nuxt": "^4.3.0",
     "tailwindcss": "^4.1.18"
